tests/paczka2/big_fuzzy/28370906.err
Error in line 12: S908 S597 96,5
Error in line 16: HZUCUET S597 97,7
Error in line 26: S908 A615 169,1
Error in line 30: S908 S553 61,7
Error in line 28: yYV S553 14,7
Error in line 46: zGNerqy S597 84,4
Error in line 43: hE3R S908 102,2
Error in line 55: HZUCUET S553 82,1
Error in line 51: hE3R S597 66,0
Error in line 66: SuTTPbzD8ya S553 94,2
Error in line 74: S908 A615 84,9
Error in line 77: zGNerqy S553 75,7
Error in line 81: zGNerqy S908 27,6
Error in line 67: SuTTPbzD8ya S559 215,7
Error in line 89: yYV S908 83,6
Error in line 88: zGNerqy A615 69,1
Error in line 93: zGNerqy S908 29,1
Error in line 96: yYV S597 109,3
Error in line 90: SuTTPbzD8ya S553 72,2
Error in line 108: zGNerqy S597 92,4
Error in line 103: hE3R A615 2,6
Error in line 125: yYV S597 65,7
Error in line 133: h6tuZxcU S553 62,8
Error in line 134: h6tuZxcU S908 51,2
Error in line 128: SuTTPbzD8ya S597 1,9
Error in line 147: h6tuZxcU S908 34,9
Error in line 143: HZUCUET S553 51,9
Error in line 150: S908 S597 109,5
Error in line 158: hE3R S553 255,5
Error in line 172: yYV A615 81,5
Error in line 175: HZUCUET S597 5,0
Error in line 196: zGNerqy S908 38,8
Error in line 199: zGNerqy A615 32,8
Error in line 201: zGNerqy S597 31,4
Error in line 206: SuTTPbzD8ya A615 33,4
Error in line 205: zGNerqy A615 26,0
Error in line 216: S908 S908 60,6
Error in line 217: S908 S597 31,5
Error in line 226: SuTTPbzD8ya S908 80,3
Error in line 225: zGNerqy A615 81,3
Error in line 232: zGNerqy S908 17,4
Error in line 233: HZUCUET S908 59,7
Error in line 231: SuTTPbzD8ya S553 75,7
Error in line 224: h6tuZxcU S597 42,0
Error in line 223: S908 S908 1,2
